--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -102,5 +102,5 @@
 .linkUnderlined() {
   text-decoration: none;
   box-shadow: 0 0.1em currentColor;
-  border-bottom: .05em transparent solid;
+  border-bottom: 0.05em transparent solid;
 }
