--- a/src/components/style/webfont.less
+++ b/src/components/style/webfont.less
@@ -21,29 +21,29 @@
  * © 2020 MyFonts Inc
 */
 
-
 /* @import must be at top of file, otherwise CSS will not work */
-@import (css) url("//hello.myfonts.net/count/3ad95c");
+@import (css) url('//hello.myfonts.net/count/3ad95c');
 
 @font-face {
-    font-family: 'Ideal';
-    font-weight: normal;
-    src: url('../../../webfonts/3AD95C_0_0.eot');
-    src: url('../../../webfonts/3AD95C_0_0.eot?#iefix') format('embedded-opentype'),
-        url('../../../webfonts/3AD95C_0_0.woff2') format('woff2'),
-        url('../../../webfonts/3AD95C_0_0.woff') format('woff'),
-        url('../../../webfonts/3AD95C_0_0.ttf') format('truetype');
-    font-display: swap;
+  font-family: 'Ideal';
+  font-weight: normal;
+  src: url('../../../webfonts/3AD95C_0_0.eot');
+  src: url('../../../webfonts/3AD95C_0_0.eot?#iefix')
+      format('embedded-opentype'),
+    url('../../../webfonts/3AD95C_0_0.woff2') format('woff2'),
+    url('../../../webfonts/3AD95C_0_0.woff') format('woff'),
+    url('../../../webfonts/3AD95C_0_0.ttf') format('truetype');
+  font-display: swap;
 }
 
-
 @font-face {
-    font-family: 'Ideal';
-    font-weight: bold;
-    src: url('../../../webfonts/3AD95C_1_0.eot');
-    src: url('../../../webfonts/3AD95C_1_0.eot?#iefix') format('embedded-opentype'),
-        url('../../../webfonts/3AD95C_1_0.woff2') format('woff2'),
-        url('../../../webfonts/3AD95C_1_0.woff') format('woff'),
-        url('../../../webfonts/3AD95C_1_0.ttf') format('truetype');
-    font-display: swap;
+  font-family: 'Ideal';
+  font-weight: bold;
+  src: url('../../../webfonts/3AD95C_1_0.eot');
+  src: url('../../../webfonts/3AD95C_1_0.eot?#iefix')
+      format('embedded-opentype'),
+    url('../../../webfonts/3AD95C_1_0.woff2') format('woff2'),
+    url('../../../webfonts/3AD95C_1_0.woff') format('woff'),
+    url('../../../webfonts/3AD95C_1_0.ttf') format('truetype');
+  font-display: swap;
 }
