--- a/src/components/CampaignVisualisations/style.module.less
+++ b/src/components/CampaignVisualisations/style.module.less
@@ -1,266 +1,267 @@
 @import '../style/vars.less';
 
 .body {
-    font-weight: bold;
-    position: relative;
+  font-weight: bold;
+  position: relative;
 
-    &.showCTA {
-        display: grid;
-        grid-template-columns: 1fr 16rem;
-        grid-gap: 2rem;
-        align-items: center;
+  &.showCTA {
+    display: grid;
+    grid-template-columns: 1fr 16rem;
+    grid-gap: 2rem;
+    align-items: center;
 
-        @media (max-width: @breakPointM) {
-            grid-template-columns: 1fr;
-            margin-bottom: 1rem;
-        }
+    @media (max-width: @breakPointM) {
+      grid-template-columns: 1fr;
+      margin-bottom: 1rem;
     }
+  }
 }
 
 .title {
-    font-size: @fontSizeM;
+  font-size: @fontSizeM;
 }
 
 .cta {
-    text-align: center;
+  text-align: center;
 }
 
 .bar {
-    position: relative;
-    height: 7.5rem;
-    line-height: 1;
+  position: relative;
+  height: 7.5rem;
+  line-height: 1;
 }
 
 .barGoal {
-    position: absolute;
-    background: var(--font-color);
-    color: var(--bg-color);
-    height: 5rem;
-    width: 100%;
-    font-size: @fontSizeM;
-    display: flex;
-    justify-content: flex-end;
+  position: absolute;
+  background: var(--font-color);
+  color: var(--bg-color);
+  height: 5rem;
+  width: 100%;
+  font-size: @fontSizeM;
+  display: flex;
+  justify-content: flex-end;
 
-    &.hasNotStarted {
-        background: var(--bg-color);
-        color: var(--font-color);
-    }
+  &.hasNotStarted {
+    background: var(--bg-color);
+    color: var(--font-color);
+  }
 }
 
 .barGoalBarInbetween {
-    position: absolute;
-    z-index: 2;
-    top: 0;
-    left: 0;
-    text-align: right;
-    padding: .5rem;
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  text-align: right;
+  padding: 0.5rem;
 }
 
 .goal {
-    position: absolute;
-    top: .5rem;
-    right: .5rem;
-    text-align: right;
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  text-align: right;
 
-    @media(max-width: @breakPointS) {
-        font-size: @fontSizeS;
-    }
+  @media (max-width: @breakPointS) {
+    font-size: @fontSizeS;
+  }
 }
 
 .barGoalBarInbetweenLabel {
-    position: absolute;
-    top: .5rem;
-    right: .5rem;
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
 
-    &Outside {
-        right: auto;
-        left: calc(100% + .5rem);
-        color: var(--font-color);
-    }
+  &Outside {
+    right: auto;
+    left: calc(100% + 0.5rem);
+    color: var(--font-color);
+  }
 }
 
 .barGoalBar {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 0;
+  transform: skewX(3.2deg) skewY(0.3deg) rotate(-0.2deg);
+
+  .hasNotStarted & {
+    border: 1px solid var(--font-color);
+  }
+}
+
+.barGoalInbetween {
+  position: absolute;
+  height: 100%;
+  background: var(--font-color);
+}
+
+.starts {
+  font-size: @fontSizeXXXL;
+  position: absolute;
+  width: 100%;
+  bottom: -0.3rem;
+  left: 1rem;
+
+  @media (max-width: @breakPointM) {
+    line-height: 0.9;
+  }
+}
+
+.barCurrent {
+  position: absolute;
+  bottom: 0;
+  height: 5rem;
+  font-size: @fontSizeXXXL;
+  color: var(--text-on-secondary-color);
+  display: flex;
+  transition: width 1s ease;
+  z-index: 3;
+
+  @media (max-width: @breakPointS) {
+    font-size: @fontSizeXXL;
+  }
+
+  @media (max-width: 360px) {
+    font-size: @fontSizeXL;
+  }
+
+  &::before {
+    content: '';
+    background: var(--secondary-color);
     position: absolute;
     height: 100%;
     width: 100%;
     z-index: 0;
-    transform: skewX(3.2deg) skewY(0.3deg) rotate(-0.2deg);
+    transform: skewX(-3.2deg) skewY(0.3deg) rotate(0.2deg);
+  }
 
-    .hasNotStarted & {
-        border: 1px solid var(--font-color);
-    }
-}
-
-.barGoalInbetween {
+  .barCurrentLabel {
     position: absolute;
-    height: 100%;
-    background: var(--font-color);
-}
+    z-index: 1;
+    bottom: -0.3rem;
+    right: 1rem;
+  }
 
-.starts {
-    font-size: @fontSizeXXXL;
-    position: absolute;
-    width: 100%;
-    bottom: -.3rem;
-    left: 1rem;
-
-    @media (max-width: @breakPointM) {
-        line-height: 0.9;
-    }
-}
-
-.barCurrent {
-    position: absolute;
-    bottom: 0;
-    height: 5rem;
-    font-size: @fontSizeXXXL;
-    color: var(--text-on-secondary-color);
-    display: flex;
-    transition: width 1s ease;
-    z-index: 3;
-
-    @media (max-width: @breakPointS) {
-        font-size: @fontSizeXXL;
-    }
-
-    @media (max-width: 360px) {
-        font-size: @fontSizeXL;
-    }
-
-    &::before {
-        content: '';
-        background: var(--secondary-color);
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        z-index: 0;
-        transform: skewX(-3.2deg) skewY(0.3deg) rotate(0.2deg);
-    }
-
+  &.outside {
     .barCurrentLabel {
-        position: absolute;
-        z-index: 1;
-        bottom: -.3rem;
-        right: 1rem;
+      left: calc(100% + 1rem);
+      right: auto;
+      color: var(--font-color);
+      @w: 2px;
+      text-shadow: @w @w 0 var(--bg-color), -@w @w 0 var(--bg-color),
+        @w -@w 0 var(--bg-color), -@w -@w 0 var(--bg-color);
     }
-
-    &.outside {
-        .barCurrentLabel {
-            left: calc(100% + 1rem);
-            right: auto;
-            color: var(--font-color);
-            @w: 2px;
-            text-shadow: @w @w 0 var(--bg-color), -@w @w 0 var(--bg-color), @w -@w 0 var(--bg-color), -@w -@w 0 var(--bg-color);
-        }
-    }
+  }
 }
 
 .eyeCatcher {
-    position: absolute;
-    left: 100%;
-    color: var(--text-on-secondary-color);
-    height: 13rem;
-    width: 13rem;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transform: rotate(-5deg);
-    top: -1rem;
-    margin-left: 1rem;
+  position: absolute;
+  left: 100%;
+  color: var(--text-on-secondary-color);
+  height: 13rem;
+  width: 13rem;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: rotate(-5deg);
+  top: -1rem;
+  margin-left: 1rem;
 
-    @media (max-width: 1350px) {
-        font-size: @fontSizeS;
-        height: 10rem;
-        width: 10rem;
-    }
+  @media (max-width: 1350px) {
+    font-size: @fontSizeS;
+    height: 10rem;
+    width: 10rem;
+  }
 
-    @media (max-width: 1270px) {
-        font-size: @fontSizeS;
-        height: 10rem;
-        width: 10rem;
-        top: 6rem;
-        margin-left: -5rem;
-    }
+  @media (max-width: 1270px) {
+    font-size: @fontSizeS;
+    height: 10rem;
+    width: 10rem;
+    top: 6rem;
+    margin-left: -5rem;
+  }
 
-    @media (max-width: @breakPointM) {
-        top: auto;
-        bottom: 100%;
-        margin-bottom: -.7rem;
-        width: 8rem;
-        height: 8rem;
-        margin-left: -6.5rem !important;
-    }
+  @media (max-width: @breakPointM) {
+    top: auto;
+    bottom: 100%;
+    margin-bottom: -0.7rem;
+    width: 8rem;
+    height: 8rem;
+    margin-left: -6.5rem !important;
+  }
 
-    p {
-        margin: 0;
-    }
+  p {
+    margin: 0;
+  }
 }
 
 .eyeCatcherWithCta {
-    top: -8rem;
-    margin-left: -3rem;
+  top: -8rem;
+  margin-left: -3rem;
 
-    @media (max-width: 1150px) {
-        top: -6rem;
-        margin-left: -4rem;
-    }
+  @media (max-width: 1150px) {
+    top: -6rem;
+    margin-left: -4rem;
+  }
 
-    @media (max-width: @breakPointM) {
-        top: auto;
-        bottom: 100%;
-        margin-left: -8.5rem;
-        margin-bottom: -1rem;
-    }
+  @media (max-width: @breakPointM) {
+    top: auto;
+    bottom: 100%;
+    margin-left: -8.5rem;
+    margin-bottom: -1rem;
+  }
 }
 
 .eyeCatcherContent {
-    position: relative;
-    z-index: 1;
-    padding: .5rem;
+  position: relative;
+  z-index: 1;
+  padding: 0.5rem;
 
-    p {
-        line-height: 1.3;
-    }
+  p {
+    line-height: 1.3;
+  }
 
-    @media(max-width: @breakPointS) {
-        font-size: @fontSizeXS;
-    }
+  @media (max-width: @breakPointS) {
+    font-size: @fontSizeXS;
+  }
 }
 
 .eyeCatcherLink {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .eyeCatcherBackground {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    fill: var(--secondary-color);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  fill: var(--secondary-color);
 }
 
 .sectionInnerHasEyeCatcher {
-    @media (max-width: @breakPointM) and (min-width: @breakPointS) {
-        margin-top: 3rem !important;
-    }
+  @media (max-width: @breakPointM) and (min-width: @breakPointS) {
+    margin-top: 3rem !important;
+  }
 }
 
 .hint {
-    margin-bottom: 1rem;
-    font-weight: normal;
-    font-size: @fontSizeS;
+  margin-bottom: 1rem;
+  font-weight: normal;
+  font-size: @fontSizeS;
 
-    @media(max-width: @breakPointM) {
-        .sectionInnerHasEyeCatcher & {
-            padding-right: 8rem;
-        }
+  @media (max-width: @breakPointM) {
+    .sectionInnerHasEyeCatcher & {
+      padding-right: 8rem;
     }
+  }
 
-    @media(max-width: @breakPointS) {
-        .sectionInnerHasEyeCatcher & {
-            padding-right: 6rem;
-        }
+  @media (max-width: @breakPointS) {
+    .sectionInnerHasEyeCatcher & {
+      padding-right: 6rem;
     }
+  }
 }
