--- a/src/components/Forms/LabelInputErrorWrapper/style.module.less
+++ b/src/components/Forms/LabelInputErrorWrapper/style.module.less
@@ -1,13 +1,13 @@
 @import '../../style/vars.less';
 
 .container {
-    display: block;
+  display: block;
 }
 
 .error {
-    margin-top: .2rem;
+  margin-top: 0.2rem;
 }
 
 .tooltip {
-    font-size: @fontSizeS;
+  font-size: @fontSizeS;
 }
