--- a/src/components/Forms/SignatureCountSlider/style.module.less
+++ b/src/components/Forms/SignatureCountSlider/style.module.less
@@ -1,14 +1,14 @@
 @import '../../style/vars.less';
 
 .inputContainer {
-    display: flex;
-    margin-top: 2rem;
-    align-items: center;
+  display: flex;
+  margin-top: 2rem;
+  align-items: center;
 
-    @media (max-width: @breakPointM) {
-        flex-direction: column;
-        align-items: stretch;
-    }
+  @media (max-width: @breakPointM) {
+    flex-direction: column;
+    align-items: stretch;
+  }
 }
 
 .sliderContainer {
@@ -16,78 +16,77 @@
 }
 
 .textInput {
-    margin-left: 1rem;
-    font-size: @fontSizeL;
-    width: 6.1rem;
+  margin-left: 1rem;
+  font-size: @fontSizeL;
+  width: 6.1rem;
 
-    @media (max-width: @breakPointM) {
-        align-self: center;
-        margin: 1rem 0 0;
-    }
+  @media (max-width: @breakPointM) {
+    align-self: center;
+    margin: 1rem 0 0;
+  }
 }
 
 .stage {
-    width: 100%;
-    position: absolute;
-    left: 0;
-    pointer-events: none;
-    z-index: 0;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  pointer-events: none;
+  z-index: 0;
 }
 
 .stageInner {
-    overflow: hidden;
-    height: 100vh;
-    width: 100vw;
-    position: absolute;
-    top: 0rem;
-    transform: translateY(-50%);
+  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  top: 0rem;
+  transform: translateY(-50%);
 }
 
 .stageInnerInner {
-    top: 10rem;
-    bottom: 0;
-    width: 100%;
-    position: absolute;
+  top: 10rem;
+  bottom: 0;
+  width: 100%;
+  position: absolute;
 }
 
 .hand {
-    transition: height .3s ease;
-    
-    @media (min-width: @breakPointM) {
-        height: 12rem;
+  transition: height 0.3s ease;
 
-        .many & {
-            height: 8rem;
-        }
+  @media (min-width: @breakPointM) {
+    height: 12rem;
 
-        .more & {
-            height: 6rem;
-        }   
+    .many & {
+      height: 8rem;
     }
 
-    @media (max-width: @breakPointM) {
-        height: 4rem;
+    .more & {
+      height: 6rem;
     }
+  }
+
+  @media (max-width: @breakPointM) {
+    height: 4rem;
+  }
 }
 
 .handContainer {
-    position: absolute;
+  position: absolute;
 
+  &:first-child {
+    .hand {
+      height: 12rem;
+    }
+  }
 
-    &:first-child {
-        .hand {
-            height: 12rem;
-        }
-    }
-
-    &_left {
-        transform: rotate(90deg);
-        left: -2rem;
-    }
-    &_right {
-        right: -2rem;
-        transform: rotate(-90deg);
-    }
+  &_left {
+    transform: rotate(90deg);
+    left: -2rem;
+  }
+  &_right {
+    right: -2rem;
+    transform: rotate(-90deg);
+  }
 }
 
 // DA SLIDER 👇
@@ -109,116 +108,116 @@
 @track-radius: 0;
 
 .track() {
-    width: @track-width;
-    height: @track-height;
-    cursor: pointer;
-    animate: 0.2s;
+  width: @track-width;
+  height: @track-height;
+  cursor: pointer;
+  animate: 0.2s;
 }
 
 .thumb() {
-    border: @thumb-border-width solid @thumb-border-color;
-    height: @thumb-height;
-    width: @thumb-width;
-    border-radius: @thumb-radius;
-    background: @thumb-color;
-    cursor: pointer;
+  border: @thumb-border-width solid @thumb-border-color;
+  height: @thumb-height;
+  width: @thumb-width;
+  border-radius: @thumb-radius;
+  background: @thumb-color;
+  cursor: pointer;
 
-    animation-name: wiggle;
-    animation-iteration-count: 3;
-    animation-duration: .2s;
+  animation-name: wiggle;
+  animation-iteration-count: 3;
+  animation-duration: 0.2s;
 }
 
 .thumbFocus() {
-    border-width: 0.2rem;
-    cursor: pointer;
+  border-width: 0.2rem;
+  cursor: pointer;
 }
 
 .input {
-    -webkit-appearance: none;
-    margin: (@thumb-height / 2) 0;
-    width: @track-width;
-    height: @track-height;
+  -webkit-appearance: none;
+  margin: (@thumb-height / 2) 0;
+  width: @track-width;
+  height: @track-height;
 
-    &:focus {
-        outline: none;
-        &::-webkit-slider-thumb {
-        .thumbFocus();
-        }
-
-        &::-moz-range-thumb {
-        .thumbFocus();
-        }
-    }
-
-    &::-webkit-slider-runnable-track {
-        .track();
-        background: @track-color;
-        border-radius: @track-radius;
-        border: @track-border-width solid @track-border-color;
-    }
-
+  &:focus {
+    outline: none;
     &::-webkit-slider-thumb {
-        .thumb();
-        -webkit-appearance: none;
-        margin-top: (((-@track-border-width * 2 + @track-height) / 2) - (@thumb-height / 2));
+      .thumbFocus();
     }
 
-    &:focus::-webkit-slider-runnable-track {
-        background: @track-color;
-    }
-
-    &::-moz-range-track {
-        .track();
-        background: @track-color;
-        border-radius: @track-radius;
-        border: @track-border-width solid @track-border-color;
-    }
     &::-moz-range-thumb {
-        .thumb();
+      .thumbFocus();
     }
+  }
 
-    &::-ms-track {
-        .track();
-        background: transparent;
-        border-color: transparent;
-        border-width: @thumb-width 0;
-        color: transparent;
-    }
+  &::-webkit-slider-runnable-track {
+    .track();
+    background: @track-color;
+    border-radius: @track-radius;
+    border: @track-border-width solid @track-border-color;
+  }
 
-    &::-ms-fill-lower {
-        background: @track-color;
-        border: @track-border-width solid @track-border-color;
-        border-radius: (@track-radius * 2);
-    }
-    &::-ms-fill-upper {
-        background: @track-color;
-        border: @track-border-width solid @track-border-color;
-        border-radius: (@track-radius * 2);
-    }
-    &::-ms-thumb {
-        .thumb();
-    }
-    &:focus::-ms-fill-lower {
-        background: @track-color;
-    }
-    &:focus::-ms-fill-upper {
-        background: @track-color;
-    }
+  &::-webkit-slider-thumb {
+    .thumb();
+    -webkit-appearance: none;
+    margin-top: (
+      ((-@track-border-width * 2 + @track-height) / 2) - (@thumb-height / 2)
+    );
+  }
+
+  &:focus::-webkit-slider-runnable-track {
+    background: @track-color;
+  }
+
+  &::-moz-range-track {
+    .track();
+    background: @track-color;
+    border-radius: @track-radius;
+    border: @track-border-width solid @track-border-color;
+  }
+  &::-moz-range-thumb {
+    .thumb();
+  }
+
+  &::-ms-track {
+    .track();
+    background: transparent;
+    border-color: transparent;
+    border-width: @thumb-width 0;
+    color: transparent;
+  }
+
+  &::-ms-fill-lower {
+    background: @track-color;
+    border: @track-border-width solid @track-border-color;
+    border-radius: (@track-radius * 2);
+  }
+  &::-ms-fill-upper {
+    background: @track-color;
+    border: @track-border-width solid @track-border-color;
+    border-radius: (@track-radius * 2);
+  }
+  &::-ms-thumb {
+    .thumb();
+  }
+  &:focus::-ms-fill-lower {
+    background: @track-color;
+  }
+  &:focus::-ms-fill-upper {
+    background: @track-color;
+  }
 }
 
-
-
 @keyframes wiggle {
-    0% {
-        transform: translateX(0);
-    }
-    33% {
-        transform: translateX(0.3rem);
-    }
-    66% {
-        transform: translateX(-0.3rem);
-    }
-    100% {
-        transform: translateX(0);
-    }
+  0% {
+    transform: translateX(0);
+  }
+  33% {
+    transform: translateX(0.3rem);
+  }
+  66% {
+    transform: translateX(-0.3rem);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
