--- a/src/components/Forms/TextInput/style.module.less
+++ b/src/components/Forms/TextInput/style.module.less
@@ -1,59 +1,61 @@
 @import '../../style/vars.less';
 @inputWidth: 25rem;
 
-.textInput, .textInputInline, .textarea {
-    background: @white ;
-    border: none;
-    color: @red;
-    font-family: inherit;
-    border-radius: 0;
-    padding: @buttonPadding;
-    line-height: inherit;
-    max-width: 100%;
-    width: @inputWidth;
+.textInput,
+.textInputInline,
+.textarea {
+  background: @white;
+  border: none;
+  color: @red;
+  font-family: inherit;
+  border-radius: 0;
+  padding: @buttonPadding;
+  line-height: inherit;
+  max-width: 100%;
+  width: @inputWidth;
 
-    @media (max-width: @breakPointS) {
-        width: 100%;
-    }
+  @media (max-width: @breakPointS) {
+    width: 100%;
+  }
 
-    &::placeholder {
-        color: @grey;
-    }
+  &::placeholder {
+    color: @grey;
+  }
 
-    &:focus {
-        outline: none;
-        box-shadow: inset 0 0 0 @borderWidthThick @red;
-    }
+  &:focus {
+    outline: none;
+    box-shadow: inset 0 0 0 @borderWidthThick @red;
+  }
 }
 
 .textInput {
-    font-size: @fontSizeL;
+  font-size: @fontSizeL;
 }
 
 .textInputInline {
-    font-size: @fontSizeS;
+  font-size: @fontSizeS;
 }
 
 .textarea {
-    font-size: @fontSizeS;
-    resize: vertical;
-    min-height: 6rem;
+  font-size: @fontSizeS;
+  resize: vertical;
+  min-height: 6rem;
 }
 
 .hideNumberArrows {
-    &[type='number'] {
-        -moz-appearance:textfield;
-    }
+  &[type='number'] {
+    -moz-appearance: textfield;
+  }
 
-    &::-webkit-outer-spin-button,
-    &::-webkit-inner-spin-button {
-        -webkit-appearance: none;
-    }
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+  }
 }
 
 .charLeftDisplay {
-    font-weight: normal;
-    text-align: right;
-    max-width: 100%;
-    width: @inputWidth;
+  font-weight: normal;
+  text-align: right;
+  max-width: 100%;
+  width: @inputWidth;
 }
