--- a/src/components/Layout/Footer/style.module.less
+++ b/src/components/Layout/Footer/style.module.less
@@ -34,7 +34,7 @@
 .nav {
   list-style: none;
   padding: 0;
-  margin: -.5rem;
+  margin: -0.5rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
@@ -48,7 +48,7 @@
 .navItem {
   margin: 0;
   display: inline;
-  margin: .5rem;
+  margin: 0.5rem;
   display: block;
 
   @media (max-width: @breakPointM) {
