--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -67,7 +67,8 @@
     display: none;
     height: auto;
 
-    &.isOpen, &:focus-within {
+    &.isOpen,
+    &:focus-within {
       display: block;
     }
   }
@@ -95,7 +96,7 @@
     margin-top: 1rem;
 
     @media (max-width: @breakPointM) {
-      margin-top: .5rem;
+      margin-top: 0.5rem;
     }
   }
 }
@@ -126,7 +127,7 @@
 
 .menuButtonBar {
   background: @red;
-  height: .3rem;
+  height: 0.3rem;
 }
 
 .menuItemParentChildren {
@@ -143,7 +144,7 @@
   }
 
   @media (max-width: @breakPointM) {
-    padding: .5rem 0 0 1rem;
+    padding: 0.5rem 0 0 1rem;
   }
 
   @media (min-width: @breakPointM) {
@@ -180,8 +181,9 @@
 .link {
   .menuLink();
 
-  &.linkActive, &:hover {
-    .linkUnderlined()
+  &.linkActive,
+  &:hover {
+    .linkUnderlined();
   }
 }
 
@@ -201,7 +203,7 @@
   @media (max-width: @breakPointS) {
     border-radius: @borderRadiusSmall !important;
     animation-name: wiggleRotated;
-    padding: .5rem .5rem .2rem !important;
+    padding: 0.5rem 0.5rem 0.2rem !important;
     margin: 0 -2rem 0 -2rem;
     transform: rotate(20deg);
 
