--- a/src/components/PartnerLogos/style.module.less
+++ b/src/components/PartnerLogos/style.module.less
@@ -1,11 +1,9 @@
-
-
 .list {
-    list-style: none;
-    padding: 0;
+  list-style: none;
+  padding: 0;
 }
 
 .image {
-    width: 10rem;
-    margin-top: .5rem;
+  width: 10rem;
+  margin-top: 0.5rem;
 }
