--- a/src/components/style/base.less
+++ b/src/components/style/base.less
@@ -2,60 +2,62 @@
 @import 'webfont';
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Ideal', Tahoma, Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    background: @grey;
-    margin: 0;
-    color: @red;
-    --bg-color: @grey;
-    --font-color: @red;
-    --font-color-secondary: @blueBright;
-    --secondary-color: @yellow;
-    --text-on-secondary-color: @red;
-    --grid-gap: 1rem;
+  font-family: 'Ideal', Tahoma, Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  background: @grey;
+  margin: 0;
+  color: @red;
+  --bg-color: @grey;
+  --font-color: @red;
+  --font-color-secondary: @blueBright;
+  --secondary-color: @yellow;
+  --text-on-secondary-color: @red;
+  --grid-gap: 1rem;
 
-    @media (min-width: @breakPointL) {
-        --grid-gap: 2rem;
-    }
+  @media (min-width: @breakPointL) {
+    --grid-gap: 2rem;
+  }
 }
 
 h1 {
-    line-height: 1.4;
+  line-height: 1.4;
 }
 
-h1, h2, h3 {
-    font-size: @fontSizeL;
+h1,
+h2,
+h3 {
+  font-size: @fontSizeL;
 
-    @media (max-width: @breakPointM) {
-        hyphens: auto;
-    }
+  @media (max-width: @breakPointM) {
+    hyphens: auto;
+  }
 }
 
 h4 {
-    font-size: @fontSizeM;
+  font-size: @fontSizeM;
 
-    @media (max-width: @breakPointM) {
-        hyphens: auto;
-    }
+  @media (max-width: @breakPointM) {
+    hyphens: auto;
+  }
 }
 
 a {
-    color: currentColor;
+  color: currentColor;
 }
 
 p {
-    line-height: 1.5;
+  line-height: 1.5;
 
-    a {
-        text-decoration: none;
-        box-shadow: 0 0.1em 0 var(--bg-color), 0 0.2em 0 currentColor;
+  a {
+    text-decoration: none;
+    box-shadow: 0 0.1em 0 var(--bg-color), 0 0.2em 0 currentColor;
 
-        &:hover {
-            box-shadow: none;
-        }
+    &:hover {
+      box-shadow: none;
     }
+  }
 }
