Removed more unused files

--- a/src/components/style/themes/dibb/dibb.less
+++ b/src/components/style/themes/dibb/dibb.less
@@ -68,9 +68,11 @@
       bottom: 0;
       }  
   }
+  /*.eyeCatcherBackground {
+    background-image: url('../../themes/dibb/eye_catcher.svg');
+  }*/
 }
 
-.eyeCatcherBackground() {
-  background-image: url('../../CampaignVisualisations/eye_catcher.svg');
-}
+
+
   
