--- a/src/components/style/themes/xbge/xbge.less
+++ b/src/components/style/themes/xbge/xbge.less
@@ -42,7 +42,7 @@
   --font-color: @red;
   --font-color-secondary: @blueBright;
   --secondary-color: @yellow;
-  --text-on-seccondary-color: @red;
+  --text-on-secondary-color: @red;
 }
 
 .header() {}
@@ -83,8 +83,7 @@
       transform: skewX(-3.2deg) skewY(0.3deg) rotate(0.2deg);
     }
   }
-}
-
-.eyeCatcherBackground() {
-  background-image: url('../../CampaignVisualisations/eye_catcher.svg');
+  /*.eyeCatcherBackground {
+    background-image: url('../../themes/xbge/eye_catcher.svg');
+  }*/
 }
