Revert some demo hacks

--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -1,7 +1,7 @@
 @import './themes/@{theme}/@{theme}.less';
 
 //this is set in gatsby-browser-config.js as global variable, you can override it here
-//@theme: dibb;
+//@theme: xbge;
 
 @red: #fc484c;
 @blueBright: #22c8ee;
