--- a/src/components/Forms/Button/style.module.less
+++ b/src/components/Forms/Button/style.module.less
@@ -37,6 +37,7 @@
 }
 
 .inlineButton {
+  text-align: start;
   display: inline;
   padding: 0;
   margin: 0;
@@ -49,11 +50,16 @@
   font-weight: inherit;
   border: none;
   cursor: pointer;
-  box-shadow: 0 0.1em 0 var(--bg-color), 0 0.2em 0 currentColor;
 
   &:hover {
     box-shadow: none;
   }
+}
+
+// Needed to make the fake link underline display correctly on small screens
+.inlineButtonWrapper {
+  display: inline;
+  box-shadow: 0 0.1em 0 var(--bg-color), 0 0.2em 0 currentColor;
 }
 
 p a.linkButton {
