--- a/src/components/Forms/Button/style.module.less
+++ b/src/components/Forms/Button/style.module.less
@@ -37,7 +37,6 @@
 }
 
 .inlineButton {
-  text-align: start;
   display: inline;
   padding: 0;
   margin: 0;
@@ -59,6 +58,7 @@
 // Needed to make the fake link underline display correctly on small screens
 .inlineButtonWrapper {
   display: inline;
+  line-height: 1.5;
   box-shadow: 0 0.1em 0 var(--bg-color), 0 0.2em 0 currentColor;
 }
 
