Added line height, fixed full stop positioning

--- a/src/components/Forms/Button/style.module.less
+++ b/src/components/Forms/Button/style.module.less
@@ -43,6 +43,7 @@
   height: 1.15em;
   background: transparent;
   color: inherit;
+  text-align: start;
   font-size: inherit;
   font-family: inherit;
   font-weight: inherit;
