--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -178,29 +178,30 @@
   cursor: default;
 }
 
-.loginParent {
-  margin-left: 2.5rem;
+.loginParentTitle {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 
-  .loginParentTitle {
-    display: flex;
+  @media (min-width: @breakPointM) {
     justify-content: center;
-    align-items: center;
-
-    .loginParentAvatar {
-      width: 2rem;
-      margin-right: 0.75rem;
-    }
   }
 
-  button {
-    background: none;
-    color: inherit;
-    border: none;
-    padding: 0;
-    font: inherit;
-    cursor: pointer;
-    outline: inherit;
+  .loginParentAvatar {
+    width: 2rem;
+    margin-right: 0.75rem;
   }
+}
+
+button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  text-align: left;
 }
 
 .link {
