--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -183,10 +183,6 @@
   justify-content: flex-start;
   align-items: center;
 
-  @media (min-width: @breakPointM) {
-    justify-content: center;
-  }
-
   .loginParentAvatar {
     width: 2rem;
     margin-right: 0.75rem;
@@ -201,7 +197,11 @@ button {
   font: inherit;
   cursor: pointer;
   outline: inherit;
-  text-align: left;
+
+  &:hover {
+    .linkUnderlined();
+    margin-bottom: -0.05em;
+  }
 }
 
 .link {
