margin left on larger screens

--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -186,6 +186,10 @@
   .loginParentAvatar {
     width: 2rem;
     margin-right: 0.75rem;
+
+    @media (min-width: @breakPointL) {
+      margin-left: 1.75rem;
+    }
   }
 }
 
