fix photo height

--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -199,6 +199,8 @@
   align-items: center;
 
   .loginParentAvatar {
+    object-fit: cover;
+    height: 2rem;
     width: 2rem;
     margin-right: 0.75rem;
 
