--- a/src/components/Forms/Signatures/style.module.less
+++ b/src/components/Forms/Signatures/style.module.less
@@ -19,3 +19,22 @@
   margin-bottom: 3rem;
   font-size: @fontSizeM;
 }
+
+.iconParagraph {
+  display: flex;
+  align-items: center;
+  font-size: @fontSizeM;
+
+  @media (max-width: @breakPointS) {
+    flex-wrap: wrap;
+  }
+}
+
+.icon {
+  width: 4rem;
+  margin-right: 2rem;
+
+  @media (max-width: @breakPointS) {
+    width: 6rem;
+  }
+}
