--- a/src/components/Layout/Header/Menu/style.module.less
+++ b/src/components/Layout/Header/Menu/style.module.less
@@ -121,8 +121,11 @@
   align-items: center;
 
   max-width: 18rem;
-  @media (max-width: @breakPointL) {
+  @media (max-width: @breakPointXL) {
     max-width: 10rem;
+  }
+  @media (max-width: @breakPointL) {
+    max-width: 8rem;
   }
   @media (max-width: @breakPointM) {
     max-width: min-content;
@@ -134,6 +137,10 @@
   height: 2rem;
   width: 2rem;
   margin-right: 0.75rem;
+
+  @media (min-width: @breakPointM) {
+    min-width: 2rem;
+  }
 
   @media (min-width: @breakPointL) {
     margin-left: 1.75rem;
