--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -178,30 +178,29 @@
   cursor: default;
 }
 
-.loginParentTitle {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
+.loginParent {
+  margin-left: 2.5rem;
 
-  @media (min-width: @breakPointM) {
+  .loginParentTitle {
+    display: flex;
     justify-content: center;
+    align-items: center;
+
+    .loginParentAvatar {
+      width: 2rem;
+      margin-right: 0.75rem;
+    }
   }
 
-  .loginParentAvatar {
-    width: 2rem;
-    margin-right: 0.75rem;
+  button {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
   }
-}
-
-button {
-  background: none;
-  color: inherit;
-  border: none;
-  padding: 0;
-  font: inherit;
-  cursor: pointer;
-  outline: inherit;
-  text-align: left;
 }
 
 .link {
