--- a/src/pages/benutzer/style.module.less
+++ b/src/pages/benutzer/style.module.less
@@ -38,6 +38,18 @@
   }
 }
 
+// Questions
+.questionsList {
+  display: grid;
+  grid-gap: 1em;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
+}
+.questionContent {
+  padding: 0.5rem;
+  hyphens: auto;
+}
+
 .usernameSubHeader {
   // grid-row-start: ;
   // grid-row-end: 3;
