Set height of icons to display correctly in Firefox

--- a/src/components/Forms/Signatures/style.module.less
+++ b/src/components/Forms/Signatures/style.module.less
@@ -32,9 +32,11 @@
 
 .icon {
   width: 4rem;
+  height: 4rem;
   margin-right: 2rem;
 
   @media (max-width: @breakPointS) {
     width: 6rem;
+    height: 6rem;
   }
 }
