--- a/src/pages/benutzer/style.module.less
+++ b/src/pages/benutzer/style.module.less
@@ -8,6 +8,7 @@
   grid-template-columns: 6em 1fr auto;
   grid-template-rows: auto;
   grid-column-gap: 1em;
+  align-items: center;
 }
 
 .avatar {
@@ -17,19 +18,24 @@
 
 .username {
   margin: 0;
+  padding: 0;
+  height: @fontSizeXXXL;
   font-size: @fontSizeXXXL;
 }
 
 .editProfileButton {
-  align-self: center;
   font-size: @fontSizeM;
 }
 
+// Content sections
 .profilePageSection {
   grid-column-start: 2;
   grid-column-end: 3;
+
+  margin-top: 2em;
 }
 
+// Details section
 .details {
   margin: 0;
 
@@ -42,7 +48,7 @@
 .questionsList {
   display: grid;
   grid-gap: 1em;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: auto;
 }
 .questionContent {
