userprofile page in own folder, change to js

--- a/src/pages/benutzer/ProfilePage/style.module.less
+++ b/src/pages/benutzer/ProfilePage/style.module.less
@@ -1,4 +1,4 @@
-@import '../../components/style/vars.less';
+@import '../../../components/style/vars.less';
 
 .profilePageGrid {
   grid-column-start: wide-start;
