--- a/src/pages/benutzer/ProfilePage/style.module.less
+++ b/src/pages/benutzer/ProfilePage/style.module.less
@@ -79,3 +79,13 @@
   line-height: 1.7rem;
   font-size: 1.5rem;
 }
+
+.signatureStats {
+  display: flex;
+  justify-content: left;
+}
+
+.link {
+  margin-top: 2rem;
+  font-size: @fontSizeXS;
+}
