--- a/src/pages/benutzer/ProfilePage/style.module.less
+++ b/src/pages/benutzer/ProfilePage/style.module.less
@@ -83,6 +83,10 @@
 .signatureStats {
   display: flex;
   justify-content: left;
+
+  @media (max-width: @breakPointS) {
+    flex-wrap: wrap;
+  }
 }
 
 .link {
