--- a/src/pages/benutzer/ProfilePage/style.module.less
+++ b/src/pages/benutzer/ProfilePage/style.module.less
@@ -22,14 +22,30 @@
 }
 
 .username {
-  margin: 2rem 0 3rem 0;
-  padding: 0;
   height: @fontSizeXXXL;
   font-size: @fontSizeXXXL;
+}
+
+.email {
+  height: @fontSizeXXL;
+  font-size: @fontSizeXXL;
+}
+
+.username,
+.email {
+  margin: 2rem 0 3rem 0;
+  padding: 0;
 
   @media (max-width: @breakPointM) {
-    margin: 1rem 0 3rem 0;
-    font-size: @fontSizeXXL;
+    margin: 0.5rem 0 1rem 0;
+    height: @fontSizeL;
+    font-size: @fontSizeL;
+  }
+
+  @media (max-width: @breakPointS) {
+    margin: 1rem 0 2rem 0;
+    height: @fontSizeM;
+    font-size: @fontSizeM;
   }
 }
 
@@ -78,18 +94,4 @@
   margin: 0;
   line-height: 1.7rem;
   font-size: 1.5rem;
-}
-
-.signatureStats {
-  display: flex;
-  justify-content: left;
-
-  @media (max-width: @breakPointS) {
-    flex-direction: column;
-  }
-}
-
-.link {
-  margin-top: 2rem;
-  font-size: @fontSizeXS;
 }
