--- a/src/pages/benutzer/ProfilePage/style.module.less
+++ b/src/pages/benutzer/ProfilePage/style.module.less
@@ -19,38 +19,25 @@
 .avatar {
   width: 6em;
   height: 6em;
+
+  @media (max-width: @breakPointS) {
+    margin: 0 auto;
+  }
 }
 
 .username {
-  height: @fontSizeXXXL;
-  font-size: @fontSizeXXXL;
-}
-
-.email {
-  height: @fontSizeXXL;
   font-size: @fontSizeXXL;
-}
 
-.username,
-.email {
-  margin: 2rem 0 3rem 0;
+  margin: 0;
   padding: 0;
 
   @media (max-width: @breakPointM) {
-    margin: 0.5rem 0 1rem 0;
-    height: @fontSizeL;
-    font-size: @fontSizeL;
+    font-size: @fontSizeXL;
   }
 
   @media (max-width: @breakPointS) {
-    margin: 1rem 0 2rem 0;
-    height: @fontSizeM;
-    font-size: @fontSizeM;
+    text-align: center;
   }
-}
-
-.editProfileButton {
-  font-size: @fontSizeM;
 }
 
 // Content sections
@@ -68,9 +55,12 @@
 // Details section
 .details {
   margin: 0;
+  font-size: @fontSizeM;
 
-  h2 {
-    margin: 0;
+  @media (max-width: @breakPointS) {
+    margin-top: 1em;
+    text-align: center;
+    font-size: @fontSizeS;
   }
 }
 
@@ -86,16 +76,6 @@
   hyphens: auto;
 }
 
-.usernameSubHeader {
-  // grid-row-start: ;
-  // grid-row-end: 3;
-  // grid-column-start: 1;
-  // grid-column-end: 2;
-  margin: 0;
-  line-height: 1.7rem;
-  font-size: 1.5rem;
-}
-
 .signatureStats {
   display: flex;
   justify-content: left;
@@ -107,5 +87,5 @@
 
 .link {
   margin-top: 2rem;
-  font-size: @fontSizeXS;
+  font-size: @fontSizeM;
 }
