Changed Header background to white

--- a/src/components/Layout/Header/Menu/style.module.less
+++ b/src/components/Layout/Header/Menu/style.module.less
@@ -101,7 +101,7 @@
   padding: 0;
 
   @media (min-width: @breakPointM) {
-    background: @grey;
+    background: @white;
     padding: 2rem 2rem 2rem;
     display: inline-block;
   }
