--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -7,7 +7,7 @@
   top: 0;
   left: 0;
   right: 0;
-  background: @grey;
+  background: @white;
   grid-template-rows: @headerHeight;
 
   @media (max-width: @breakPointS) {
