Visualisations: Added blue background to completed bars

--- a/src/components/CampaignVisualisations/style.module.less
+++ b/src/components/CampaignVisualisations/style.module.less
@@ -154,6 +154,14 @@
         @w -@w 0 var(--bg-color), -@w -@w 0 var(--bg-color);
     }
   }
+
+  &.completed {
+    color: var(--bg-color);
+
+    &::before {
+      background: @blueBright;
+    }
+  }
 }
 
 .eyeCatcher {
