--- a/src/components/Forms/DonationForm/style.module.less
+++ b/src/components/Forms/DonationForm/style.module.less
@@ -1,17 +1,29 @@
 @import '../../style/vars.less';
 
 .donationForm {
-  background-color: @yellow;
+  --secondary-color: @blueBright;
+  --bg-color: @yellow;
+  background-color: var(--bg-color);
+  font-weight: normal;
   margin-top: 3em;
   padding: 30px 40px 40px 40px;
 
-  form {
+  div {
     font-size: @fontSizeM;
   }
 
   input[type='radio'] {
     margin-bottom: 0.8rem;
   }
+
+  label > div {
+    font-size: @fontSizeS;
+    font-weight: bold;
+  }
+}
+
+.partialForm {
+  margin-bottom: 0;
 }
 
 .customAmount {
@@ -25,4 +37,8 @@
 .currency {
   font-size: @fontSizeXL;
   margin-top: 16px;
+}
+
+.info {
+  font-weight: bold;
 }
