Added radio button component

--- a/src/components/Forms/DonationForm/style.module.less
+++ b/src/components/Forms/DonationForm/style.module.less
@@ -3,6 +3,7 @@
 .donationForm {
   --secondary-color: @blueBright;
   --bg-color: @yellow;
+  --font-color: @red;
   background-color: var(--bg-color);
   font-weight: normal;
   margin-top: 3em;
