--- a/src/components/Forms/DonationForm/style.module.less
+++ b/src/components/Forms/DonationForm/style.module.less
@@ -23,6 +23,16 @@
   }
 }
 
+.primaryButton {
+  background: var(--font-color);
+  color: var(--bg-color);
+  border: none;
+
+  &:hover {
+    background: darken(@red, 5%);
+  }
+}
+
 .partialForm {
   margin-bottom: 0;
 }
