--- a/src/components/Forms/DonationForm/style.module.less
+++ b/src/components/Forms/DonationForm/style.module.less
@@ -25,7 +25,7 @@
     margin-bottom: 0.8rem;
   }
 
-  label > div {
+  label div {
     font-size: @fontSizeS;
     font-weight: bold;
   }
@@ -60,4 +60,8 @@
 
 .info {
   font-weight: bold;
+}
+
+.hint {
+  font-size: @fontSizeXS;
 }
