Add loading message

--- a/src/components/Forms/DonationForm/style.module.less
+++ b/src/components/Forms/DonationForm/style.module.less
@@ -8,6 +8,9 @@
   font-weight: normal;
   margin-top: 3em;
   padding: 30px 40px 40px 40px;
+  // Only for HurrayCrowd component:
+  // position: relative;
+  // z-index: 1;
 
   h3 {
     hyphens: unset;
@@ -29,6 +32,10 @@
     font-size: @fontSizeS;
     font-weight: bold;
   }
+}
+
+.waitingHint {
+  --secondary-color: @yellow;
 }
 
 .primaryButton {
