Remove validation hint on input change, re-arrange grid to prevent the link button from moving

--- a/src/components/Forms/SearchPlaces/style.module.less
+++ b/src/components/Forms/SearchPlaces/style.module.less
@@ -5,7 +5,7 @@
   display: grid;
   grid-template-columns: @inputWidth 1fr;
   grid-gap: 2rem;
-  align-items: flex-end;
+  align-items: baseline;
   @media (max-width: @breakPointM) {
     grid-template-columns: @inputWidth;
     margin-bottom: 1rem;
