--- a/src/components/Profile/ProfileOverview/style.module.less
+++ b/src/components/Profile/ProfileOverview/style.module.less
@@ -18,14 +18,14 @@
 
 .profilePageSection {
   position: relative;
-  background-color: @white;
+  background-color: @greyMedium;
   padding: 3.3rem 4rem;
   text-decoration: none;
 
   &:hover,
   &:active,
   &:focus {
-    background-color: @greyBright;
+    background-color: @white;
   }
 
   @media (max-width: @breakPointS) {
@@ -123,7 +123,6 @@ h2 {
   .signatureStats {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
 
     @media (max-width: @breakPointS) {
       flex-direction: column;
