Added bmbf logo

--- a/src/components/Layout/Footer/style.module.less
+++ b/src/components/Layout/Footer/style.module.less
@@ -1,5 +1,17 @@
 @import '../../style/vars.less';
 
+.preFooter {
+  .headerFooterGrid();
+  background-color: @white;
+}
+
+.bmbfLogo {
+  grid-column: 2;
+  width: 12rem;
+  height: auto;
+  margin: 2rem 0;
+}
+
 .footer {
   .headerFooterGrid();
   .globeBackground();
