Newsletter Component, styling, small fix in showUploadLabel condition

--- a/src/components/Profile/style.module.less
+++ b/src/components/Profile/style.module.less
@@ -62,3 +62,22 @@
     font-size: @fontSizeS;
   }
 }
+
+.editPageSection {
+  position: relative;
+  background-color: @greyMedium;
+  padding: 3.3rem 4rem;
+}
+
+.editSettings {
+  grid-column: 1 / span 2;
+}
+
+.backToProfile {
+  left: 1rem;
+  margin-bottom: 3rem;
+
+  &:before {
+    content: '< ';
+  }
+}
