Newsletter Settings - frontend component almost done

--- a/src/components/Profile/style.module.less
+++ b/src/components/Profile/style.module.less
@@ -63,6 +63,11 @@
   }
 }
 
+.optionSectionHeading {
+  margin-top: 2em;
+  margin-bottom: 0.5em;
+}
+
 .editPageSection {
   position: relative;
   background-color: @greyMedium;
@@ -80,4 +85,32 @@
   &:before {
     content: '< ';
   }
+}
+
+.bottomRightLink {
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+}
+
+.linkLikeFormated {
+  text-decoration: underline;
+  cursor: pointer;
+  margin: 0;
+}
+
+.alignRight {
+  text-align: right;
+}
+
+.noMargin {
+  margin: 0;
+}
+
+.inputDescription {
+  margin-bottom: -0.25em;
+}
+
+.socialButtonRow {
+  padding-top: 1em;
 }
