--- a/src/components/Profile/ProfileNotifications/style.module.less
+++ b/src/components/Profile/ProfileNotifications/style.module.less
@@ -1,1 +1,30 @@
 @import '../../../components/style/vars.less';
+.sectionHeadline {
+  font-weight: 100;
+}
+
+.newsletterCard {
+  background-color: white;
+  padding: 0.5em 1.5em 0.5em 1.5em;
+  border-radius: 15px;
+  margin-bottom: 1em;
+}
+
+.newsletterCardHeading {
+  font-size: @fontSizeM;
+  margin-bottom: 0;
+}
+
+.newsletterCardDescription {
+  font-size: @fontSizeS;
+  margin: 0.25em 0em 0.5em 0em;
+}
+
+.savePhoneNumberBtn {
+  margin-left: 1em;
+}
+
+.optionRow {
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
