--- a/src/components/Profile/ProfileNotifications/style.module.less
+++ b/src/components/Profile/ProfileNotifications/style.module.less
@@ -28,3 +28,11 @@
   margin-top: 2em;
   margin-bottom: 2em;
 }
+
+.revokeButtonRow {
+  margin-bottom: 1.5em;
+}
+
+.cancelRevokeProcess {
+  padding-top: 2.5em;
+}
