--- a/src/components/Profile/style.module.less
+++ b/src/components/Profile/style.module.less
@@ -122,3 +122,30 @@
 .messengerIcon {
   margin-right: 0.5em;
 }
+
+.loading {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border: 3px solid #f0f0f0;
+  border-radius: 50%;
+  border-top-color: #ff4646;
+  animation: spin 1s ease-in-out infinite;
+  -webkit-animation: spin 1s ease-in-out infinite;
+}
+
+.loadingMsg {
+  margin-left: 0.5em;
+  font-size: 18px;
+}
+
+@keyframes spin {
+  to {
+    -webkit-transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes spin {
+  to {
+    -webkit-transform: rotate(360deg);
+  }
+}
